--- a/12_mult_table/12_mult_table.vcxproj
+++ b/12_mult_table/12_mult_table.vcxproj
@@ -19,8 +19,8 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{2B8D2D3A-1AF2-4391-B9FA-A3B030C286E3}</ProjectGuid>
-    <RootNamespace>My03_value_between_03</RootNamespace>
+    <ProjectGuid>{9EFB717F-E1A4-4D04-B13D-8A7B9475E831}</ProjectGuid>
+    <RootNamespace>My12_mult_table</RootNamespace>
     <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -95,8 +95,8 @@
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>false</GenerateDebugInformation>
+      <SubSystem>Console</SubSystem>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
