--- a/23_arrays_001/23_arrays_001.vcxproj
+++ b/23_arrays_001/23_arrays_001.vcxproj
@@ -23,6 +23,7 @@
     <ProjectGuid>{1213FDB2-D40D-42C2-B79F-1DE302E8862A}</ProjectGuid>
     <RootNamespace>My23arrays001</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.15063.0</WindowsTargetPlatformVersion>
+    <ProjectName>23_arrays_01</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
